deploy/users/sample/hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: user-sample
  labels:
    app: hello
    swkoo.kr/user: sample
spec:
  selector:
    app: hello
  ports:
    - name: http
      port: 80
      targetPort: http
